<resources>
    <string name="app_name">Barcode</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="store_in_database">STORE IN DATABASE</string>
    <string name="search_in_database">SEARCH IN DATABASE</string>
    <string name="reject">REJECT</string>
    <string name="apply">APPLY</string>
    <string name="code">CODE: </string>
    <string name="description">DESCRIPTION: </string>
    <string name="price">PRICE: </string>
    <string name="location">LOCATION: </string>
    <string name="ask">DO YOU WANT TO DELETE THE BARCODE?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="trainingName">TRAINING NAME:</string>
    <string name="gestureNameForTrainingSet">GESTURE NAME FOR TRAINING SET:</string>
    <string name="gestureNameForRecognition">GESTURE NAME FOR RECOGNITION:</string>
    <string name="availableSets">AVAILABLE TRAINING AND GESTURE NAMES:</string>
    <string name="title_activity_maps">Map</string>
    <string name="retrieve_information">RETRIEVE BARCODE INFO</string>
</resources>
