<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_ask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:onClick="deleteBarcode"
        android:id="@+id/yes" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:onClick="keepBarcode"
        android:id="@+id/no" />

</LinearLayout>
