<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trainingName"
        android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/text_trainingName_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestureNameForTrainingSet" />

    <EditText
        android:id="@+id/text_gestureName1_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_learning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start learning"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestureNameForRecognition" />

    <EditText
        android:id="@+id/text_gestureName2_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_recognizing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start recognition" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availableSets" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_learn"
        android:layout_gravity="center_horizontal"
        android:theme="@android:style/Theme.Light" />

</LinearLayout>
